--- a/index.html
+++ b/index.html
@@ -1407,7 +1407,7 @@
 										<li><a href="#">Ссылка</a></li>
 										<li><a href="#">Ссылка</a></li>
 										<li><a href="#">Ссылка</a></li>
-										<li><a class="footer__link-app" href="#"><img src="../img/google-play.png" alt=""></a></li>
+										<li><a class="footer__link-app" href="#"><img src="img/google-play.png" alt=""></a></li>
 									</ul>
 								</div>
 							</div>
@@ -1455,7 +1455,7 @@
 									</div>
 								</div>
 							</div>
-							<a class="footer__link-app" href="#"><img src="../img/google-play.png" alt=""></a>
+							<a class="footer__link-app" href="#"><img src="img/google-play.png" alt=""></a>
 							<div class="footer__copyright d-block d-lg-none">2022 © ЯАВТО.РФ Все права защищены</div>
 						</div>
 
