--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
 										</div>
 									</a>
 									<a class="carparks__item-title" href="carpark.html">
-										<span>ЛюксВипХайпТакси</span>
+										<span>Яндекс Такси</span>
 									</a>
 									<div class="carparks__content">
 										<a class="carparks__value" href="carpark.html"><span>16</span>автомобилей</a>
@@ -694,7 +694,7 @@
 							<div class="col-12 col-sm-6 col-md-3">
 								<div class="carparks__item">
 									<a class="carparks__img" href="carpark.html">
-										<img src="img/carpark.png" alt="">
+										<img src="img/carpark2.png" alt="">
 										<div class="carparks__hover carparks-hover">
 											<div class="carparks-hover__item carparks-hover-act">
 												<span class="icon">
@@ -711,7 +711,7 @@
 												<use xlink:href="#crown"></use>
 											</svg>
 										</span>
-										<span>ЛюксВипХайпТакси</span>
+										<span>Maxim</span>
 									</a>
 									<div class="carparks__content">
 										<a class="carparks__value" href="carpark.html"><span>16</span>автомобилей</a>
@@ -726,7 +726,7 @@
 							<div class="col-12 col-sm-6 col-md-3">
 								<div class="carparks__item">
 									<a class="carparks__img" href="carpark.html">
-										<img src="img/carpark.png" alt="">
+										<img src="img/carpark3.png" alt="">
 										<div class="carparks__hover carparks-hover">
 											<div class="carparks-hover__item">
 												<div>Добавить в</div>
@@ -739,7 +739,7 @@
 										</div>
 									</a>
 									<a class="carparks__item-title" href="carpark.html">
-										<span>ЛюксВипХайпТакси</span>
+										<span>Ситимобил</span>
 									</a>
 									<div class="carparks__content">
 										<a class="carparks__value" href="carpark.html"><span>16</span>автомобилей</a>
@@ -754,7 +754,7 @@
 							<div class="col-12 col-sm-6 col-md-3">
 								<div class="carparks__item">
 									<a class="carparks__img" href="carpark.html">
-										<img src="img/carpark.png" alt="">
+										<img src="img/carpark4.png" alt="">
 										<div class="carparks__hover carparks-hover">
 											<div class="carparks-hover__item">
 												<div>Добавить в</div>
@@ -767,7 +767,7 @@
 										</div>
 									</a>
 									<a class="carparks__item-title" href="carpark.html">
-										<span>ЛюксВипХайпТакси</span>
+										<span>Uber</span>
 									</a>
 									<div class="carparks__content">
 										<a class="carparks__value" href="carpark.html"><span>16</span>автомобилей</a>
