--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
 							<div class="col-12 col-sm-6 col-md-3">
 								<div class="carparks__item">
 									<a class="carparks__img" href="carpark.html">
-										<img src="img/carpark3.png" alt="">
+										<img src="img/carpark3.jpg" alt="">
 										<div class="carparks__hover carparks-hover">
 											<div class="carparks-hover__item">
 												<div>Добавить в</div>
@@ -754,7 +754,7 @@
 							<div class="col-12 col-sm-6 col-md-3">
 								<div class="carparks__item">
 									<a class="carparks__img" href="carpark.html">
-										<img src="img/carpark4.png" alt="">
+										<img src="img/carpark4.jpg" alt="">
 										<div class="carparks__hover carparks-hover">
 											<div class="carparks-hover__item">
 												<div>Добавить в</div>
