--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
 							<div class="col-12 col-sm-6 col-md-3">
 								<div class="carparks__item">
 									<a class="carparks__img" href="carpark.html">
-										<img src="img/carpark.png" alt="">
+										<img src="img/carpark1.png" alt="">
 										<div class="carparks__hover carparks-hover">
 											<div class="carparks-hover__item">
 												<div>Добавить в</div>
@@ -679,7 +679,7 @@
 										</div>
 									</a>
 									<a class="carparks__item-title" href="carpark.html">
-										<span>Яндекс Такси</span>
+										<span>Яндекс Go</span>
 									</a>
 									<div class="carparks__content">
 										<a class="carparks__value" href="carpark.html"><span>16</span>автомобилей</a>
